<resources>
    <string name="app_name">PiHole Control</string>
    <string name="home_title">Home</string>
    <string name="queries_title">Live Queries</string>
    <string name="settings_title">Settings</string>
    <string name="devices_title">Devices</string>
    <string name="top_clients_title">Top Clients</string>
    <string name="top_queries_title">Top Permitted Domains</string>
    <string name="top_blocked_title">Top Blocked Domains</string>

    <!-- Add device -->
    <string name="add_device_title">Add device</string>
    <string name="name_title">Name</string>
    <string name="url_title">Pi-hole URL</string>
    <string name="password_title">Password</string>
    <string name="verify_ssl_title">Verify SSL certificate</string>
    <string name="save_title">Save</string>
</resources>