<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="xyz.podd.piholecontrol.ui.home.HomeFragment"
            android:label="@string/home_title"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_queries"
            android:name="xyz.podd.piholecontrol.ui.queries.QueriesFragment"
            android:label="@string/queries_title"
            tools:layout="@layout/fragment_queries"/>

    <fragment
            android:id="@+id/navigation_settings"
            android:name="xyz.podd.piholecontrol.ui.settings.SettingsFragment"
            android:label="@string/settings_title"/>

    <fragment
            android:id="@+id/navigation_add_device"
            android:name="xyz.podd.piholecontrol.ui.settings.AddDeviceFragment"
            android:label="@string/add_device_title"/>

</navigation>